Sun Dec 22 15:53:47 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libdwarf/libdwarf_arange.c (_dwarf_arange_init): Fix wrong amount
	of heap memory allocation storing for Dwarf_Arange data.
	* libdwarf/dwarf_lineno.c (dwarf_srclines): Fix wrong amount of heap
	memory allocation for storing Dwarf_Line data.

Sun Dec 22 14:05:09 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	current-trunk:
	* libelf/_libelf.h (_libelf_release_data,_libelf_release_elf,
	_libelf_release_scn): Drop the NULL pointer return value.  Using that
	value for local variable assignment results in "dead assignment"
	compiler warnings.
	* libelf/libelf_allocate.c: Follow.
	* libelf/elf_data.c: Likewise.
	* libelf/elf_end.c: Likewise.
	* libelf/libelf_memory.c: Likewise.

Fri Dec 20 23:10:37 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/m4: Add empty directory.

Fri Dec 20 22:56:14 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	Automake 1.13 fixes:
	* current-trunk (svn:ignore): Add compile and ar-lib.
	* current-trunk/configure.ac (AM_INIT_AUTOMAKE): Drop -Werror.
	(AM_PROG_CC_C_O): Add.
	(LT_INIT): Move after AC_PROG/AM_PROG tests.

	* current-trunk/libdwarf/GNUmakefile.am: Avoid GNU makefile specific
	feature use.
	* current-trunk/libelf/GNUmakefile.am: Likewise.

Fri Dec 20 20:14:52 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Fri Dec 20 20:13:12 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2971

Sat Sep  7 15:17:42 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Sep  7 15:15:33 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2963

Sun Jul  7 16:34:07 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
